# VibeHarness

./: .gitignore  CLAUDE.md  LICENSE  Modelfile  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
tests/: test_agent.py  test_filesystem.py  test_llm_helpers.py  test_memory_prompt.py  test_registry_schema.py  test_runlog.py  test_settings.py  test_streaming_log.py  test_tools.py  test_toolset.py  test_validation.py  test_web.py
tests/integration/: test_model_live.py
vibeharness/: __init__.py  __main__.py  agent.py  cli.py  config.py  filesystem.py  fs_tools.py  llm.py  memory.py  prompt.py  registry.py  reporting.py  runlog.py  settings.py  tools.py  toolset.py  validation.py  web.py
